CSCEXAM-843 Possibility to remove examination event altogether
* Add control column to byod exam search

* Add function to force remove examination event

* Fix async bugs and make routes more logical

* Refactor remove function to enrolment.service

* CSCEXAM-843 Possibility to remove examination event altogether

Co-authored-by: Aleksanteri Virmasalo <aleksanteri.virmasalo@valamis.com>
Co-authored-by: Matti Lupari <matti.lupari@arcusys.fi>